kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: expense-tracker
  labels:
    app.kubernetes.io/name: expense-tracker
    app.kubernetes.io/part-of: expense-tracker
    environment: development
